deploy/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snappass-dep
  labels:
    app: snappass
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: snappass
  template:
    metadata:
      labels:
        app: snappass
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: redis
          image: redis:5.0.5-alpine 
          volumeMounts:
            - name: redis-conf-vol
              mountPath: /usr/local/etc/redis/
              readOnly: false
        - name: snappass
          image: harbor.e2x.com/library/snappass:0.0.2
          ports:
            - name: http
              containerPort: 5000
      volumes:
        - name: redis-conf-vol
          configMap:
            name: redis-conf-cm
