deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snappass-svc
  labels:
    app: snappass
spec:
  ports:
    - port: 5000
      targetPort: 5000
  type:  ClusterIP
  selector:
    app: snappass
