deploy/manifests/ingress-internal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: snappass-internal
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - snappass.e2x.com
      secretName: letsencrypt-snappass-internal
  rules:
  - host: snappass.e2x.com
    http:
        paths:
        - path: /
          backend:
            serviceName: snappass
            servicePort: 5000
